[metadata]
name = oakstore
version = 0.1.1
description = timeseries dataframe database based on parquet
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mercator-labs/oakstore
author = Dominique F. Garmier
auther_email = dominique@garmier.ch
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.8
install_requires =
    dask>=2022.6.1
    pandas>=1.4.3
    pyarrow>=8.0.0
    python-snappy>=0.6.1

[options.packages.find]
exclude =
    tests*
    testing*

[flake8]
count = True
statistics = True
max-line-length = 127
extend-exclude = .venv, .pyc
ignore=F401,E123,W503

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
exclude = (setup.py|build/|tests/|testing/)
disallow_untyped_defs = True

[mypy-testing.*]
disallow_untyped_defs = False

[mypy-tests.*]
disallow_untyped_defs = False

[tool:pytest]
python_files = tests/*.py tests/**/*.py tests.py test_*.py *_tests.py
